package proto_ff;

// calm 自定义的fieldoption都在该文件中
import "yd_fieldoptions.proto";
import "common_logic.proto";

import "Com.proto";

//======================================结构===================================//
//上线通知所有数据 NOTIFY_BEST_EQ_DATA
message NotifyBestEQData
{
	repeated BestEQSlotInfo slots = 1;  		//槽位信息
	repeated BestEQEquipInfo equips = 2;		//所有装备信息
	repeated BestEQTask 	tasks = 3;			//前置任务
}

//更新单个槽位信息 NOTIFY_BEST_EQ_SLOT
message NotifyBestEQSlot
{
	optional BestEQSlotInfo slot = 1;
}

//更新装备 NOTIFY_BEST_EQ_EQUIP
message NotifyBestEQEquip
{
	optional int32 type =1;		 //1更新 2 删除 3添加
	repeated BestEQEquipInfo infos = 2;
}

//更新前置任务 NOTIFY_BEST_EQ_TASK
message NotifyBestEQTask
{
	repeated BestEQTask 	tasks = 1;			//前置任务
}


//1-1:领取前置任务 BEST_EQ_RECV_TASK_REQ
message BestEQRecvTaskReq
{
	optional int32 id = 1;
}

//1-2:领取前置任务返回 BEST_EQ_RECV_TASK_RSP
message BestEQRecvTaskRsp
{
	optional int32 ret = 1;
	optional int32 id = 2;
}

//2-1:绿装分解  BEST_EQ_DECOMPOSE_REQ
message BestEQDecomposeReq
{
	optional int32 instId = 1;
}
//2-2:绿装分解返回  BEST_EQ_DECOMPOSE_RSP
message BestEQDecomposeRsp
{
	optional int32 ret = 1;
	optional int32 instId = 2;
}

//3-1:装备拆解查看 (返回上一次打造)  BEST_EQ_RETURN_PRE_VIEW_REQ
message BestEQReturnPreViewReq
{
	optional int32 instId = 1;
}

//3-2:装备拆解查看返回 BEST_EQ_RETURN_PRE_VIEW_RSP
message BestEQReturnPreViewRsp
{
	optional int32 ret = 1;
	optional int32 instId = 2;
}


//4-1:装备拆解  BEST_EQ_RETURN_REQ 拆解是返回上一级打造
message BestEQReturnReq
{
	optional int32 instId = 1;
}

//4-2:装备拆解返回 BEST_EQ_RETURN_RSP
message BestEQReturnRsp
{
	optional int32 ret = 1;
	optional int32 instId = 2;
}


//5-1:穿戴装备请求 BEST_EQ_DRESS_REQ
message BestEQDressReq
{
	optional int32 instId = 1;
}

//5-2:穿戴装备返回 BEST_EQ_DRESS_RSP
message BestEQDressRsp
{
	optional int32 ret = 1;
	optional int32 instId = 2;
}


//6-1:注灵or进阶请求 BEST_EQ_POUR_REQ
message BestEQPourReq
{
	optional int32 slot = 1;
}

//6-2:注灵or进阶返回 BEST_EQ_POUR_RSP
message BestEQPourRsp
{
	optional int32 ret = 1;
	optional int32 slot = 2;
}

//7-1:铭刻请求（铭刻or 突破) BEST_EQ_BREAK_REQ
message BestEQBreakReq
{
	optional int32 slot = 1;
}

//7-2:铭刻返回 BEST_EQ_BREAK_RSP
message BestEQBreakRsp
{
	optional int32 ret = 1;
	optional int32 slot = 2;
}

//8-1:觉醒请求 BEST_EQ_AWAKEN_REQ
message BestEQAwakenReq
{
	optional int32 slot = 1;
}

//8-2:觉醒返回 BEST_EQ_AWAKEN_RSP
message BestEQAwakenRsp
{
	optional int32 ret = 1;
	optional int32 slot = 2;
}

//9-1:强化合成请求 BEST_EQ_STRONG_REQ
message BestEQStrongReq
{
	optional int32 instId = 1;
	repeated int32 costInstId = 2;
}

//9-2:强化合成返回 BEST_EQ_STRONG_RSP
message BestEQStrongRsp
{
	optional int32 ret = 1;
	optional int32 instId = 2;
	repeated int32 costInstId = 3;
}


//10-1:铭刻还原及确认请求 BEST_EQ_BREAK_CONFIRM_REQ
message BestEQBreakConfirmReq
{
	optional int32 slot = 1;
	optional int32 type = 2; //0还原，1确认
}

//10-2:铭刻还原及确认返回 BEST_EQ_BREAK_CONFIRM_RSP
message BestEQBreakConfirmRsp
{
	optional int32 ret = 1;
	optional int32 slot = 2;
	optional int32 type = 3; //0还原，1确认
}










